tests/diagnostics/snapshots/test_note.txt
Error: Can't compare apples with oranges (at <unknown>:1:6)
  | 
1 | apple == orange
  |       ^^ Comparison attempted here

Note: Stop trying, this is a fruitless endeavor